--- a/TierPension/TierPension/TierPension.csproj
+++ b/TierPension/TierPension/TierPension.csproj
@@ -15,6 +15,8 @@
     <None Remove="Images\bg.png" />
     <None Remove="Images\bg.png.png" />
     <None Remove="Images\Icon.jpg" />
+    <None Remove="Images\Icon.png" />
+    <None Remove="Images\plus.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +30,8 @@
     <Resource Include="Images\abholen.jpg" />
     <Resource Include="Images\Background.webp" />
     <Resource Include="Images\bg.png" />
-    <Resource Include="Images\Icon.jpg" />
+    <Resource Include="Images\Icon.png" />
+    <Resource Include="Images\plus.png" />
   </ItemGroup>
 
 </Project>
